force-app/main/default/objects/Preferences__c/Preferences__c.object-meta.xml
<CustomObject>
    <label>Preferences</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferences</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>