force-app/main/default/objects/Preferences__c/fields/Accommodation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accommodation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>