force-app/main/default/objects/Preferences__c/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <label>Accommodation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>King</fullName>
            </value>
            <value>
                <fullName>Mini Suite</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>The Darling</fullName>
            </value>
            <value>
                <fullName>The Star Grand</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>NULL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>