force-app/main/default/objects/Preferences__c/fields/Clothing_Size__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Size__c</fullName>
    <label>Clothing Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shirt L</fullName>
            </value>
            <value>
                <fullName>Shirt M</fullName>
            </value>
            <value>
                <fullName>Shirt S</fullName>
            </value>
            <value>
                <fullName>Shirt XL</fullName>
            </value>
            <value>
                <fullName>Shirt XS</fullName>
            </value>
            <value>
                <fullName>Shirt XXL</fullName>
            </value>
            <value>
                <fullName>L</fullName>
                <isActive>false</isActive>
                <label>L</label>
            </value>
            <value>
                <fullName>M</fullName>
                <isActive>false</isActive>
                <label>M</label>
            </value>
            <value>
                <fullName>S</fullName>
                <isActive>false</isActive>
                <label>S</label>
            </value>
            <value>
                <fullName>XL</fullName>
                <isActive>false</isActive>
                <label>XL</label>
            </value>
            <value>
                <fullName>XS</fullName>
                <isActive>false</isActive>
                <label>XS</label>
            </value>
            <value>
                <fullName>XXL</fullName>
                <isActive>false</isActive>
                <label>XXL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>