force-app/main/default/objects/Preferences__c/fields/Dealer_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Ethnicity__c</fullName>
    <label>Dealer Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>