force-app/main/default/objects/Preferences__c/fields/Dealer_Gender__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Gender__c</fullName>
    <label>Dealer Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>