force-app/main/default/objects/Preferences__c/fields/Dealer_Language__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Language__c</fullName>
    <label>Dealer Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Shanghainese</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>