force-app/main/default/objects/Preferences__c/fields/Dietary__c.field-meta.xml
<CustomField>
    <fullName>Dietary__c</fullName>
    <label>Dietary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celiac</fullName>
            </value>
            <value>
                <fullName>Dairy Free</fullName>
            </value>
            <value>
                <fullName>Fully Cooked Food</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>Lactose Free</fullName>
            </value>
            <value>
                <fullName>No Beef</fullName>
            </value>
            <value>
                <fullName>No Chicken</fullName>
            </value>
            <value>
                <fullName>No Duck</fullName>
            </value>
            <value>
                <fullName>No Egg</fullName>
            </value>
            <value>
                <fullName>No Garlic</fullName>
            </value>
            <value>
                <fullName>No Mushroom</fullName>
            </value>
            <value>
                <fullName>No Onion</fullName>
            </value>
            <value>
                <fullName>No Pork</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>No Raw Food</fullName>
            </value>
            <value>
                <fullName>No Sashimi</fullName>
            </value>
            <value>
                <fullName>No Seafood</fullName>
            </value>
            <value>
                <fullName>No Shellfish</fullName>
            </value>
            <value>
                <fullName>Pescatarian (only eat seafood and vegetarian)</fullName>
            </value>
            <value>
                <fullName>Sugar Free</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>