force-app/main/default/objects/Preferences__c/fields/Drinking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drinking_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Drinking Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>