force-app/main/default/objects/Preferences__c/fields/F_B_Derived__c.field-meta.xml
<CustomField>
    <fullName>F_B_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>F&amp;B Derived</label>
    <length>255</length>
    <type>Text</type>
</CustomField>