force-app/main/default/objects/Preferences__c/fields/Favourite_Dish__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Dish__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Favourite Dish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>