force-app/main/default/objects/Preferences__c/fields/Favourite_Drink__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Drink__c</fullName>
    <label>Favourite Drink</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>Champagne / Sparkling</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Red Wine</fullName>
            </value>
            <value>
                <fullName>Soft drink</fullName>
            </value>
            <value>
                <fullName>Spirits</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>White wine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>