force-app/main/default/objects/Preferences__c/fields/Food_Beverage_Tobacco_Likes__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage_Tobacco_Likes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Food/Beverage/Tobacco (Likes)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>