force-app/main/default/objects/Preferences__c/fields/Game_Dominance_Derived__c.field-meta.xml
<CustomField>
    <fullName>Game_Dominance_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Game Dominance (Derived)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>