force-app/main/default/objects/Preferences__c/fields/hostId__c.field-meta.xml
<CustomField>
    <fullName>hostId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>hostId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>