force-app/main/default/objects/Preferences__c/fields/Hotel_amenities__c.field-meta.xml
<CustomField>
    <fullName>Hotel_amenities__c</fullName>
    <label>Hotel amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$50 fruit basket</fullName>
            </value>
            <value>
                <fullName>bathrobe</fullName>
            </value>
            <value>
                <fullName>bath salt</fullName>
            </value>
            <value>
                <fullName>body lotion</fullName>
            </value>
            <value>
                <fullName>comb</fullName>
            </value>
            <value>
                <fullName>intl adaptor</fullName>
            </value>
            <value>
                <fullName>shampoo</fullName>
            </value>
            <value>
                <fullName>shaver</fullName>
            </value>
            <value>
                <fullName>shower gel</fullName>
            </value>
            <value>
                <fullName>slippers</fullName>
            </value>
            <value>
                <fullName>soap</fullName>
            </value>
            <value>
                <fullName>VIP amenities 2 sets of each toothbrush</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>