force-app/main/default/objects/Preferences__c/fields/Hotel_Previous_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Previous_Room_Type__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Hotel Previous Room Type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>