force-app/main/default/objects/Preferences__c/fields/Hotel_room_preference__c.field-meta.xml
<CustomField>
    <fullName>Hotel_room_preference__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Hotel room preference</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>