force-app/main/default/objects/Preferences__c/fields/Management_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Management_Instructions__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Management Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>