force-app/main/default/objects/Preferences__c/fields/Most_Played_Property_Derived__c.field-meta.xml
<CustomField>
    <fullName>Most_Played_Property_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Most Played Property (Derived)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>