force-app/main/default/objects/Preferences__c/fields/Other_Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Other_Entertainment__c</fullName>
    <label>Other Entertainment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese New Year</fullName>
            </value>
            <value>
                <fullName>Christmas Ball</fullName>
            </value>
            <value>
                <fullName>Dining Experience</fullName>
            </value>
            <value>
                <fullName>Dinner and Show</fullName>
            </value>
            <value>
                <fullName>Exclusive Draws</fullName>
            </value>
            <value>
                <fullName>Fashion Shows</fullName>
            </value>
            <value>
                <fullName>Harbour Cruise</fullName>
            </value>
            <value>
                <fullName>Luncheon</fullName>
            </value>
            <value>
                <fullName>Melbourne Cup</fullName>
            </value>
            <value>
                <fullName>New Year Ball</fullName>
            </value>
            <value>
                <fullName>NRL Grand Final</fullName>
            </value>
            <value>
                <fullName>Shopping Event</fullName>
            </value>
            <value>
                <fullName>Spa and Hair Salon Experience</fullName>
            </value>
            <value>
                <fullName>State of Origin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>