force-app/main/default/objects/Preferences__c/fields/Other_Tournament__c.field-meta.xml
<CustomField>
    <fullName>Other_Tournament__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Tournament</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>