force-app/main/default/objects/Preferences__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>General_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>