force-app/main/default/objects/Preferences__c/fields/Patron_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Patron_ExtId__c</fullName>
    <formula>Patron__r.Patron_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patron ExtId</label>
    <type>Text</type>
</CustomField>