force-app/main/default/objects/Preferences__c/fields/Preferred_Dealer_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Dealer_Other__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Preferred Dealer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>