force-app/main/default/objects/Preferences__c/fields/Preferred_Food__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Food__c</fullName>
    <label>Preferred Food</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>