force-app/main/default/objects/Preferences__c/fields/Preferred_Game__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Game__c</fullName>
    <label>Preferred Game</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baccarat</fullName>
            </value>
            <value>
                <fullName>Big Wheel</fullName>
                <label>Big wheel</label>
            </value>
            <value>
                <fullName>Blackjack</fullName>
            </value>
            <value>
                <fullName>Caribbean Stud</fullName>
            </value>
            <value>
                <fullName>Craps</fullName>
            </value>
            <value>
                <fullName>Electronic Gaming</fullName>
            </value>
            <value>
                <fullName>Four Card Poker</fullName>
            </value>
            <value>
                <fullName>Keno</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pai Gow</fullName>
            </value>
            <value>
                <fullName>Roulette</fullName>
            </value>
            <value>
                <fullName>Sic Bo</fullName>
            </value>
            <value>
                <fullName>TAB</fullName>
            </value>
            <value>
                <fullName>Three Card Poker</fullName>
            </value>
            <value>
                <fullName>Vegas Star Baccarat</fullName>
            </value>
            <value>
                <fullName>Vegas Star Blackjack</fullName>
            </value>
            <value>
                <fullName>Vegas Star Roulette</fullName>
            </value>
            <value>
                <fullName>Pokerpontoon</fullName>
                <isActive>false</isActive>
                <label>Pokerpontoon</label>
            </value>
            <value>
                <fullName>Rapid roulette</fullName>
                <isActive>false</isActive>
                <label>Rapid roulette</label>
            </value>
            <value>
                <fullName>Rapid sic bo</fullName>
                <isActive>false</isActive>
                <label>Rapid sic bo</label>
            </value>
            <value>
                <fullName>Roulette sic bo</fullName>
                <isActive>false</isActive>
                <label>Roulette sic bo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>