force-app/main/default/objects/Preferences__c/fields/Preferred_Gaming_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Gaming_Location__c</fullName>
    <label>Preferred Gaming Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Private Gaming Room</fullName>
            </value>
            <value>
                <fullName>Private Salon</fullName>
            </value>
            <value>
                <fullName>Private Table</fullName>
            </value>
            <value>
                <fullName>Sovereign Harbours</fullName>
            </value>
            <value>
                <fullName>Sovereign Lakes</fullName>
            </value>
            <value>
                <fullName>Sovereign Room</fullName>
            </value>
            <value>
                <fullName>Vantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>