force-app/main/default/objects/Preferences__c/fields/Preferred_room_No__c.field-meta.xml
<CustomField>
    <fullName>Preferred_room_No__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Preferred room No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>