force-app/main/default/objects/Preferences__c/fields/Preferred_Staff__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Staff__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Preferred Staff</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>