force-app/main/default/objects/Preferences__c/fields/Preferred_TG_Derived__c.field-meta.xml
<CustomField>
    <fullName>Preferred_TG_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred TG (Derived)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>