force-app/main/default/objects/Preferences__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>General_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>