force-app/main/default/objects/Preferences__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BNE - Bite</fullName>
            </value>
            <value>
                <fullName>BNE - Black Hide</fullName>
            </value>
            <value>
                <fullName>BNE - Fat Noodle</fullName>
            </value>
            <value>
                <fullName>BNE - Fuel Bar</fullName>
            </value>
            <value>
                <fullName>BNE - Kitchen at Treasury</fullName>
            </value>
            <value>
                <fullName>BNE - Lab</fullName>
            </value>
            <value>
                <fullName>BNE - Livewire</fullName>
            </value>
            <value>
                <fullName>BNE - Lobby Bar</fullName>
            </value>
            <value>
                <fullName>BNE - Orchid</fullName>
            </value>
            <value>
                <fullName>BNE - Sovereign</fullName>
            </value>
            <value>
                <fullName>BNE - The Club</fullName>
            </value>
            <value>
                <fullName>BNE - Will &amp; Flow</fullName>
            </value>
            <value>
                <fullName>GC - Atrium Bar</fullName>
            </value>
            <value>
                <fullName>GC - Cherry Bar</fullName>
            </value>
            <value>
                <fullName>GC - Cucina Vivo</fullName>
            </value>
            <value>
                <fullName>GC- Food Fantasy</fullName>
            </value>
            <value>
                <fullName>GC - Food Quarter</fullName>
            </value>
            <value>
                <fullName>GC - Garden Bar</fullName>
            </value>
            <value>
                <fullName>GC - Garden Kitchen</fullName>
            </value>
            <value>
                <fullName>GC - GKB In Bar</fullName>
            </value>
            <value>
                <fullName>GC - Harvest</fullName>
            </value>
            <value>
                <fullName>GC - Imperial</fullName>
            </value>
            <value>
                <fullName>GC - Kiyomi</fullName>
            </value>
            <value>
                <fullName>GC - Kiyomi Bar</fullName>
            </value>
            <value>
                <fullName>GC - Latitude</fullName>
            </value>
            <value>
                <fullName>GC - Nineteen Bar</fullName>
            </value>
            <value>
                <fullName>GC - Nineteen Restaurant</fullName>
            </value>
            <value>
                <fullName>GC - Oasis Lounge</fullName>
            </value>
            <value>
                <fullName>GC - Poker Bar</fullName>
            </value>
            <value>
                <fullName>GC - Pool Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>