force-app/main/default/objects/Preferences__c/fields/Restaurant_Derived__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Restaurant (Derived)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>