force-app/main/default/objects/Preferences__c/fields/Salon_Table_Preference__c.field-meta.xml
<CustomField>
    <fullName>Salon_Table_Preference__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Salon Table Preference</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>