force-app/main/default/objects/Preferences__c/fields/Service_Issue_Non_Gaming__c.field-meta.xml
<CustomField>
    <fullName>Service_Issue_Non_Gaming__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Issue (Non Gaming)</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>