force-app/main/default/objects/Preferences__c/fields/Show_Seating__c.field-meta.xml
<CustomField>
    <fullName>Show_Seating__c</fullName>
    <label>Show Seating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Reserve only</fullName>
            </value>
            <value>
                <fullName>Wheel chair access</fullName>
            </value>
            <value>
                <fullName>Aisle Seat</fullName>
            </value>
            <value>
                <fullName>Close to wash room</fullName>
            </value>
            <value>
                <fullName>Close to exit door</fullName>
            </value>
            <value>
                <fullName>Corporate Box</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
            <value>
                <fullName>VIP</fullName>
                <isActive>false</isActive>
                <label>VIP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>