force-app/main/default/objects/Preferences__c/fields/Show_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Show_Theatre__c</fullName>
    <label>Show/Theatre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concerts English</fullName>
            </value>
            <value>
                <fullName>Concerts Non - English</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>