force-app/main/default/objects/Preferences__c/fields/Smoking_Area_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Area_Preferred__c</fullName>
    <label>Smoking Area Preferred?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoking</fullName>
            </value>
            <value>
                <fullName>Non-smoking or unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>