force-app/main/default/objects/Preferences__c/fields/Special_Interest__c.field-meta.xml
<CustomField>
    <fullName>Special_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Interest</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>