force-app/main/default/objects/Preferences__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Rules - AFL</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Racing</fullName>
            </value>
            <value>
                <fullName>Motorsport</fullName>
            </value>
            <value>
                <fullName>Netball</fullName>
            </value>
            <value>
                <fullName>Other Sports</fullName>
            </value>
            <value>
                <fullName>Rugby League</fullName>
            </value>
            <value>
                <fullName>Rugby Union</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>UFC</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>NULL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>